--- a/files/homeassistant/nodered_version/individual_control.yaml
+++ b/files/homeassistant/nodered_version/individual_control.yaml
@@ -254,3 +254,4 @@ cards:
             name: End Time
             attribute: end_time
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_remaining_time
+            name: Remaining Time
