Update dashboards for HACs compatibility
Updating due to recent HACs repo changes - english only supported

--- a/files/homeassistant/hacs_version/external_spool.yaml
+++ b/files/homeassistant/hacs_version/external_spool.yaml
@@ -9,7 +9,7 @@ elements:
       type: state-icon
       entity: sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool
       icon: >-
-        ${states['sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool'].state != 'Empty' ?
+        ${states['sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool'].state != 'empty' ?
         'fapro:filament-1' : 'mdi:tray' }
     style:
       top: 50%
