Add A1 Mini Resources
Adding resources for future A1 Mini support and finally moving AMS_2 image

--- a/files/homeassistant/hacs_version/individual_ams.yaml
+++ b/files/homeassistant/hacs_version/individual_ams.yaml
@@ -150,7 +150,7 @@ elements:
           font-size: 0.75em
           color: rgba(0,0,0,0)
           '--label-badge-red': '#2F9AC5'
-image: /local/media/AMS_2.png
+image: /local/media/bambuprinter/AMS_2.png
 style: |
   ha-card {
     background: none !important;
