--- a/files/homeassistant/nodered_version/individual_ams_lite.yaml
+++ b/files/homeassistant/nodered_version/individual_ams_lite.yaml
@@ -10,10 +10,10 @@ elements:
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_0
       icon: >-
         ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_0'].state != 'Empty' ?
-        'fapro:filament-1' : 'mdi:tray' }
+        'custom:filament-1' : 'mdi:tray' }
     style:
-      top: 28%
-      left: 21.4%
+      top: 27%
+      left: 15.4%
       '--paper-item-icon-color': var(--tray_0_color)
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px var(--tray_0_bg)
@@ -25,8 +25,8 @@ elements:
     tap_action:
       action: none
     style:
-      top: 77%
-      left: 21%
+      top: 42%
+      left: 15.4%
       text-align: center
       font-size: 1em
       background-color: rgba(0,0,0,0.4)
@@ -42,10 +42,10 @@ elements:
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_1
       icon: >-
         ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_1'].state != 'Empty' ?
-        'fapro:filament-1' : 'mdi:tray' }
+        'custom:filament-1' : 'mdi:tray' }
     style:
-      top: 28%
-      left: 39.7%
+      top: 62%
+      left: 45.7%
       '--paper-item-icon-color': var(--tray_1_color)
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px  var(--tray_1_bg)
@@ -58,39 +58,7 @@ elements:
       action: none
     style:
       top: 77%
-      left: 40%
-      text-align: center
-      font-size: 1em
-      background-color: rgba(0,0,0,0.4)
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
-      border-radius: 50px
-      pointer-events: none
-      color: '#FFFFFF'
-  - type: custom:config-template-card
-    entities:
-      - sensor.{HA_AMS_DEVICE_NAME}_tray_2
-    element:
-      type: state-icon
-      entity: sensor.{HA_AMS_DEVICE_NAME}_tray_2
-      icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_2'].state != 'Empty' ?
-        'fapro:filament-1' : 'mdi:tray' }
-    style:
-      top: 28%
-      left: 59.7%
-      '--paper-item-icon-color': var(--tray_2_color)
-      background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px  var(--tray_2_bg)
-      border-radius: 50px
-      '--mdc-icon-size': 2.4em
-  - type: state-label
-    entity: sensor.{HA_AMS_DEVICE_NAME}_tray_2
-    attribute: type
-    tap_action:
-      action: none
-    style:
-      top: 77%
-      left: 60%
+      left: 45.7%
       text-align: center
       font-size: 1em
       background-color: rgba(0,0,0,0.4)
@@ -106,13 +74,13 @@ elements:
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_3
       icon: >-
         ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_3'].state != 'Empty' ?
-        'fapro:filament-1' : 'mdi:tray' }
+        'custom:filament-1' : 'mdi:tray' }
     style:
-      top: 28%
-      left: 79.6%
+      top: 11%
+      left: 44.7%
       '--paper-item-icon-color': var(--tray_3_color)
       background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px var(--tray_3_bg)
+      box-shadow: 0 0 5px 5px  var(--tray_3_bg)
       border-radius: 50px
       '--mdc-icon-size': 2.4em
   - type: state-label
@@ -121,8 +89,8 @@ elements:
     tap_action:
       action: none
     style:
-      top: 77%
-      left: 79.6%
+      top: 26%
+      left: 44.7%
       text-align: center
       font-size: 1em
       background-color: rgba(0,0,0,0.4)
@@ -130,27 +98,39 @@ elements:
       border-radius: 50px
       pointer-events: none
       color: '#FFFFFF'
-  - type: conditional
-    conditions:
-      - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-        state_not: OFFLINE
-    elements:
-      - entity: sensor.{HA_AMS_DEVICE_NAME}_temp
-        type: state-badge
-        style:
-          top: 22%
-          left: 8%
-          font-size: 0.75em
-          color: rgba(0,0,0,0)
-      - entity: sensor.{HA_AMS_DEVICE_NAME}_humidity_level
-        type: state-badge
-        style:
-          top: 22%
-          left: 92.5%
-          font-size: 0.75em
-          color: rgba(0,0,0,0)
-          '--label-badge-red': '#2F9AC5'
-image: /local/media/bambuprinter/AMS_2.png
+  - type: custom:config-template-card
+    entities:
+      - sensor.{HA_AMS_DEVICE_NAME}_tray_2
+    element:
+      type: state-icon
+      entity: sensor.{HA_AMS_DEVICE_NAME}_tray_2
+      icon: >-
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_2'].state != 'Empty' ?
+        'custom:filament-1' : 'mdi:tray' }
+    style:
+      top: 52%
+      left: 84.6%
+      '--paper-item-icon-color': var(--tray_2_color)
+      background-color: rgba(0,0,0,0.5)
+      box-shadow: 0 0 5px 5px var(--tray_2_bg)
+      border-radius: 50px
+      '--mdc-icon-size': 2.4em
+  - type: state-label
+    entity: sensor.{HA_AMS_DEVICE_NAME}_tray_2
+    attribute: type
+    tap_action:
+      action: none
+    style:
+      top: 67%
+      left: 84.6%
+      text-align: center
+      font-size: 1em
+      background-color: rgba(0,0,0,0.4)
+      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
+      border-radius: 50px
+      pointer-events: none
+      color: '#FFFFFF'
+image: /local/media/bambuprinter/ams_lite.png
 style: |
   ha-card {
     background: none !important;
